Fix console word wrapping

--- a/src/view/css/logger.css
+++ b/src/view/css/logger.css
@@ -20,6 +20,7 @@ body {
 	position: fixed;
 	font-size: 14px;
 	font-family: 'Consolas', Fallback, sans-serif;
+	word-wrap: break-word;
 }
 
 .red {
